--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -3,21 +3,18 @@
 <!--<data>-->
 <!--<variable-->
 <!--name="createUserVM"-->
-<!--type="be.hogent.faith.faith.createUser.CreateEventViewModell"/>-->
+<!--type="be.hogent.faith.faith.createUser.CreateEventViewModel"/>-->
 <!--</data>-->
 <LinearLayout
-
+        xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent" android:layout_height="match_parent">
-    <Button android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/button_createEvent_create"
-            android:text="Maak event"/>
 
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            tools:text="test"
             android:id="@+id/text_createEvent_description"/>
 
 </LinearLayout>
