--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<layout xmlns:android="http://schemas.android.com/apk/res/android">-->
-<!--<data>-->
-<!--<variable-->
-<!--name="createUserVM"-->
-<!--type="be.hogent.faith.faith.createUser.CreateEventViewModel"/>-->
-<!--</data>-->
-<LinearLayout
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent" android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+                name="createUserVM"
+                type="be.hogent.faith.faith.createUser.CreateEventViewModel"/>
+    </data>
 
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:text="test"
+            android:text="@{createUserVM.eventDescription}"
             android:id="@+id/text_createEvent_description"/>
 
-</LinearLayout>
-        <!--</layout>-->
+</layout>
