--- a/app/src/main/res/layout/fragment_avatar.xml
+++ b/app/src/main/res/layout/fragment_avatar.xml
@@ -6,49 +6,74 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text="Name"
-            android:ems="10"
-            android:id="@+id/editText_avatar"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/linearLayout">
+
+        <TextView
+                android:text="@string/hoe_heet_je"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/naam_hint"
+                android:inputType="textPersonName"
+                android:text="@string/string_avatar_name"
+                android:ems="10"
+                android:id="@+id/editText_avatar"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                tools:text="@tools:sample/full_names"
+                app:layout_constraintStart_toEndOf="@+id/textView"
+                android:layout_marginStart="8dp"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="478dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            tools:text="@tools:sample/full_names"
-            app:layout_constraintStart_toEndOf="@+id/textView"
-            android:layout_marginStart="8dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="184dp"
-            android:layout_height="448dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            android:id="@+id/avatar_rv_avatar"
-            android:layout_marginBottom="8dp"
-            tools:listitem="@layout/avatar_rv_item"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias="1.0">
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="176dp"
-            android:layout_height="448dp"
-            android:id="@+id/avatar_rv_backpack"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            tools:listitem="@layout/avatar_rv_item"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+        <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="184dp"
+                android:layout_height="290dp"
+                android:id="@+id/avatar_rv_avatar"
+                tools:listitem="@layout/avatar_rv_item"
+                android:layout_marginTop="8dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="176dp"
+                android:layout_height="343dp"
+                android:id="@+id/avatar_rv_backpack"
+                tools:listitem="@layout/avatar_rv_item"/>
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
