--- a/app/src/main/res/layout-sw600dp-land/fragment_avatar.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_avatar.xml
@@ -1,76 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+    <EditText
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="16dp"
-            android:id="@+id/linearLayout2"
+            android:hint="@string/naam_hint"
+            android:inputType="textPersonName"
+            android:text="@string/string_avatar_name"
+            android:ems="10"
+            android:id="@+id/editText_avatar"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_weight="1">
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            tools:text="@tools:sample/full_names"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            android:layout_marginStart="8dp"
+            android:autofillHints="username"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toBottomOf="@+id/textView"/>
 
-        <TextView
-                android:text="@string/hoe_heet_je"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/avatar_textview_welcome"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                tools:text="Welkom! Wat is jouw naam?"
-                android:labelFor="@id/editText_avatar"
-                android:layout_weight="1"/>
+    <TextView
+            android:text="@string/hoe_heet_je"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-        <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/editText_avatar"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="8dp"
-                tools:text="@tools:sample/full_names"
-                android:layout_weight="1"
-                android:autofillHints="username"
-                />
-    </LinearLayout>
+    <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline2"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5"/>
 
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="600dp"
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/avatar_rv_avatar"
+            tools:listitem="@layout/avatar_rv_item"
+            android:layout_weight="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_weight="1">
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText_avatar"
+            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintBottom_toTopOf="@+id/guideline2"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/avatar_rv_avatar"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                tools:listitem="@layout/avatar_rv_item"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1">
-        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
-                tools:listitem="@layout/avatar_rv_item"
-                android:id="@+id/avatar_rv_backpack"
-                android:layout_weight="1"/>
-    </LinearLayout>
-</LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/avatar_rv_backpack"
+            tools:listitem="@layout/avatar_rv_item"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintTop_toTopOf="@+id/guideline2"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"/>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
