--- a/app/src/main/res/layout/fragment_avatar.xml
+++ b/app/src/main/res/layout/fragment_avatar.xml
@@ -6,76 +6,74 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/naam_hint"
+            android:inputType="textPersonName"
+            android:text="@string/string_avatar_name"
+            android:ems="10"
+            android:id="@+id/editText_avatar"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/linearLayout">
-
-        <TextView
-                android:text="@string/hoe_heet_je"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-        <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/naam_hint"
-                android:inputType="textPersonName"
-                android:text="@string/string_avatar_name"
-                android:ems="10"
-                android:id="@+id/editText_avatar"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                tools:text="@tools:sample/full_names"
-                app:layout_constraintStart_toEndOf="@+id/textView"
-                android:layout_marginStart="8dp"
-                android:autofillHints="username"/>
-    </LinearLayout>
-
-
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
+            tools:text="@tools:sample/full_names"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            android:layout_marginStart="8dp"
+            android:autofillHints="username"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toBottomOf="@+id/textView"/>
+
+    <TextView
+            android:text="@string/hoe_heet_je"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintHorizontal_bias="1.0">
+            app:layout_constraintTop_toTopOf="parent"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:id="@+id/avatar_rv_avatar"
-                tools:listitem="@layout/avatar_rv_item"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"/>
+    <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:id="@+id/avatar_rv_backpack"
-                tools:listitem="@layout/avatar_rv_item"
-                android:layout_weight="1"/>
-    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/avatar_rv_avatar"
+            tools:listitem="@layout/avatar_rv_item"
+            android:layout_weight="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="@+id/guideline"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText_avatar">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/avatar_rv_backpack"
+            tools:listitem="@layout/avatar_rv_item"
+            android:layout_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText_avatar"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
