--- a/app/src/main/res/layout/fragment_draw_avatar.xml
+++ b/app/src/main/res/layout/fragment_draw_avatar.xml
@@ -100,10 +100,11 @@
         <com.divyanshu.draw.widget.DrawView
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/container_draw_utilities"
                 android:id="@+id/draw_canvas"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"/>
+                android:layout_height="0dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
