--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -61,7 +61,7 @@
                 app:layout_constraintBottom_toTopOf="@id/btn_event_details_audio"
                 android:src="@drawable/event_detail_text"
                 android:id="@+id/btn_event_details_text"
-                android:onClick="@{() -> eventDetailsVM.onTextButtonClicked()"
+                android:onClick="@{() -> eventDetailsVM.onTextButtonClicked()}"
                 app:layout_constraintEnd_toStartOf="@id/event_details_middleDivider"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -71,7 +71,7 @@
                 android:layout_margin="16dp"
                 app:layout_constraintTop_toTopOf="@id/event_details_upperDivider"
                 app:layout_constraintStart_toEndOf="@id/event_details_middleDivider"
-                android:onClick="@{() -> eventDetailsVM.onCameraButtonClicked()"
+                android:onClick="@{() -> eventDetailsVM.onCameraButtonClicked()}"
                 app:layout_constraintBottom_toTopOf="@id/btn_event_details_drawing"
                 android:src="@drawable/event_detail_camera"
                 android:id="@+id/btn_event_details_camera"
@@ -85,7 +85,7 @@
                 app:layout_constraintBottom_toBottomOf="@id/event_details_lowerDivider"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/event_details_middleDivider"
-                android:onClick="@{() -> eventDetailsVM.onAudioButtonClicked()"
+                android:onClick="@{() -> eventDetailsVM.onAudioButtonClicked()}"
                 app:layout_constraintTop_toBottomOf="@id/btn_event_details_text"
                 android:id="@+id/btn_event_details_audio"/>
 
@@ -93,7 +93,7 @@
                 android:layout_width="0dp"
                 android:layout_margin="16dp"
                 android:src="@drawable/event_detail_drawing"
-                android:onClick="@{() -> eventDetailsVM.onDrawingButtonClicked()"
+                android:onClick="@{() -> eventDetailsVM.onDrawingButtonClicked()}"
                 android:layout_height="0dp"
                 android:id="@+id/btn_event_details_drawing"
                 app:layout_constraintStart_toEndOf="@id/event_details_middleDivider"
@@ -126,6 +126,7 @@
                 app:layout_constraintTop_toBottomOf="@id/event_details_lowerDivider"
                 android:src="@drawable/event_details_send"
                 android:layout_margin="16dp"
+                android:onClick="@{() -> eventDetailsVM.onSendButtonClicked()}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/event_details_sideDivider"
                 app:layout_constraintBottom_toBottomOf="parent"/>
@@ -141,7 +142,7 @@
         <ImageButton
                 android:layout_height="wrap_content"
                 android:src="@drawable/event_detail_go_to_emotion"
-                android:onClick="@{() -> eventDetailsVM.onSendButtonClicked()"
+                android:onClick="@{() -> eventDetailsVM.onEmotionAvatarClicked()}"
                 android:id="@+id/btn_event_details_gotoEmotionAvatar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/event_details_sideDivider"
@@ -155,7 +156,6 @@
                 android:id="@+id/event_details_middleDivider"
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.45"/>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
