--- a/app/src/main/res/layout-sw600dp-land/fragment_avatar.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_avatar.xml
@@ -6,41 +6,57 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
+    <TextView
+            android:text="@string/frag_avatar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/avatar_tv_title"
+            style="@style/Base.TextAppearance.AppCompat.Title"
+            android:layout_margin="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+            android:text="@string/frag_avatar_lbl_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/avatar_tv_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/avatar_tv_pick_avatar"
+            app:layout_constraintTop_toBottomOf="@+id/avatar_tv_title"
+            android:layout_margin="8dp"
+            />
+
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/naam_hint"
             android:inputType="textPersonName"
             android:text="@string/string_avatar_name"
-            android:ems="10"
-            android:id="@+id/editText_avatar"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
+            android:id="@+id/avatar_txt_name"
+            app:layout_constraintBaseline_toBaselineOf="@id/avatar_tv_name"
             tools:text="@tools:sample/full_names"
-            app:layout_constraintStart_toEndOf="@+id/textView"
-            android:layout_marginStart="8dp"
-            android:autofillHints="username"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintBottom_toBottomOf="@+id/textView"/>
-
-    <TextView
-            android:text="@string/hoe_heet_je"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_margin="8dp"
+            app:layout_constraintStart_toEndOf="@+id/avatar_tv_name"
+            android:autofillHints="username"/>
 
     <androidx.constraintlayout.widget.Guideline
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/guideline2"
+            android:id="@+id/avatar_guide_middle"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5"/>
+
+    <TextView
+            android:text="@string/frag_avatar_pick_avatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/avatar_tv_pick_avatar"
+            style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
+            android:layout_margin="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avatar_tv_name"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
@@ -49,17 +65,23 @@
             tools:listitem="@layout/avatar_rv_item"
             android:layout_weight="1"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_margin="8dp"
             android:orientation="horizontal"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText_avatar"
-            app:layout_constraintVertical_bias="1.0"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintBottom_toTopOf="@+id/avatar_guide_middle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avatar_tv_pick_avatar">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+            android:text="@string/frag_avatar_pick_backpack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:id="@+id/avatar_tv_pick_backpack"
+            style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avatar_guide_middle"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
@@ -69,15 +91,19 @@
             android:layout_weight="1"
             android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintTop_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
+            app:layout_constraintBottom_toTopOf="@id/avatar_btn_go_to_town"
+            android:layout_margin="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/avatar_tv_pick_backpack"/>
 
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/frag_avatar_lbl_to_town"
+            android:id="@+id/avatar_btn_go_to_town"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
