--- a/app/src/main/res/layout/avatar_rv_item.xml
+++ b/app/src/main/res/layout/avatar_rv_item.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent">
 
     <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:srcCompat="@tools:sample/avatars"
             android:id="@+id/avatar_list_image"/>
