--- a/app/src/main/res/layout/fragment_take_photo.xml
+++ b/app/src/main/res/layout/fragment_take_photo.xml
@@ -5,7 +5,7 @@
 
         <variable
                 name="photoViewModel"
-                type="be.hogent.faith.faith.takePicture.TakePictureViewModel"/>
+                type="be.hogent.faith.faith.takePicture.TakePhotoViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
