--- a/app/src/main/res/layout/fragment_take_photo.xml
+++ b/app/src/main/res/layout/fragment_take_photo.xml
@@ -11,7 +11,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -29,7 +28,8 @@
                 android:id="@+id/btn_takePhoto_takePhoto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Take picture"
+                android:onClick="@{() -> photoViewModel.takePhotoButtonClicked()}"
+                android:text="@string/frag_takePhoto_takePhoto"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_margin="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"/>
@@ -38,7 +38,8 @@
                 android:id="@+id/btn_takePhoto_toEmotionAvatar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Ga naar emotie"
+                android:onClick="@{() -> photoViewModel.emotionAvatarButtonClicked()}"
+                android:text="@string/frag_takePhoto_goToEmotionAvatar"
                 android:layout_margin="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
