--- a/app/src/main/res/layout/avatar_rv_item.xml
+++ b/app/src/main/res/layout/avatar_rv_item.xml
@@ -9,6 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/avatar_list_image"/>
+            android:id="@+id/avatar_list_image"
+            android:contentDescription="@string/description_thumbnail"/>
 </LinearLayout>
 
