--- a/app/src/main/res/layout-sw600dp-land/fragment_avatar.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_avatar.xml
@@ -41,13 +41,6 @@
             app:layout_constraintStart_toEndOf="@+id/avatar_tv_name"
             android:autofillHints="username"/>
 
-    <androidx.constraintlayout.widget.Guideline
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/avatar_guide_middle"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5"/>
-
     <TextView
             android:text="@string/frag_avatar_pick_avatar"
             android:layout_width="wrap_content"
@@ -59,42 +52,18 @@
             app:layout_constraintTop_toBottomOf="@+id/avatar_tv_name"/>
 
     <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/avatar_rv_avatar"
             tools:listitem="@layout/avatar_rv_item"
             android:layout_weight="1"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_margin="8dp"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/avatar_guide_middle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/avatar_tv_pick_avatar">
 
     </androidx.recyclerview.widget.RecyclerView>
-
-    <TextView
-            android:text="@string/frag_avatar_pick_backpack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:id="@+id/avatar_tv_pick_backpack"
-            style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/avatar_guide_middle"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/avatar_rv_backpack"
-            tools:listitem="@layout/avatar_rv_item"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/avatar_btn_go_to_town"
-            android:layout_margin="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/avatar_tv_pick_backpack"/>
 
     <Button
             android:layout_width="wrap_content"
