--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -9,7 +9,7 @@
 
     <TextView
             android:text="TextView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/eventTitle"
             android:layout_weight="2"
@@ -18,7 +18,7 @@
             />
 
     <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/avatar_placeholder"
             android:id="@+id/thumbnailAvatar"
