<feat>: overview events ordered by date

--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -7,15 +7,33 @@
               android:padding="8dp"
               android:weightSum="3">
 
-    <TextView
-            android:text="TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/eventTitle"
-            android:layout_weight="2"
-            android:layout_marginRight="16dp"
-            android:layout_marginEnd="16dp"
-            />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:app="http://schemas.android.com/apk/res-auto"
+                  android:orientation="vertical"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:padding="8dp"
+                  android:layout_weight="2">
+
+        <TextView
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/eventTitle"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+                />
+
+        <TextView
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/eventDate"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+                />
+    </LinearLayout>
 
     <ImageView
             android:layout_width="0dp"
